--- a/css/backoffice/utils/variables/_typography.scss
+++ b/css/backoffice/utils/variables/_typography.scss
@@ -30,6 +30,7 @@ $ibo-font-size-500: 3rem !default; /* 36px */
 $ibo-font-size-550: 4rem !default; /* 48px */
 
 $ibo-font-family-base: "Raleway" !default;
+$ibo-font-family-fallbacks: "sans-serif", "system-ui" !default;
 $ibo-font-family-monospace: "monospace" !default;
 $ibo-font-family-code: $ibo-font-family-monospace !default;
 
