--- a/templates/base/components/datatable/layout.ready.js.twig
+++ b/templates/base/components/datatable/layout.ready.js.twig
@@ -330,3 +330,14 @@ if ($('#datatable_dlg_{{ oUIBlock.GetId() }}').hasClass('itop-datatable')) {
 }
 
 $('#datatable_dlg_{{ oUIBlock.GetId() }}').DataTableSettings($aOptions);
+
+if(window.ResizeObserver){
+        let oTable{{ sListIDForVarSuffix }}ResizeTimeout = null;
+        const oTable{{ sListIDForVarSuffix }}Resize = new ResizeObserver(function(){
+            clearTimeout(oTable{{ sListIDForVarSuffix }}ResizeTimeout);
+            oTable{{ sListIDForVarSuffix }}ResizeTimeout = setTimeout(function(){
+                $('#{{ oUIBlock.GetId() }}').DataTable().columns.adjust();
+            }, 120);
+        });
+        oTable{{ sListIDForVarSuffix }}Resize.observe($('#{{ oUIBlock.GetId() }}')[0]);
+}
