--- a/templates/base/components/datatable/static/formtable/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.ready.js.twig
@@ -1,4 +1,7 @@
-var table{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_ELEMENT_IDENTIFIER')) }} = $('#{{ oUIBlock.GetId() }}').DataTable({
+{% set sListId = oUIBlock.GetId() %}
+{% set sListIDForVarSuffix = ('' ~ sListId)|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) %}
+
+var table{{ sListIDForVarSuffix }} = $('#{{ oUIBlock.GetId() }}').DataTable({
     language: {
         emptyTable: "{{ 'UI:Message:EmptyList:UseAdd'|dict_s }}"
     },
@@ -23,5 +26,16 @@ var table{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_
     {% endif %}
 });
 if ($('#{{ oUIBlock.GetId() }}').find('thead').is(':visible')) {
-    table{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_ELEMENT_IDENTIFIER')) }}.columns.adjust().draw();
+    table{{ sListIDForVarSuffix }}.columns.adjust().draw();
+}
+
+if(window.ResizeObserver){
+    let oFromTable{{ sListIDForVarSuffix }}ResizeTimeout = null;
+    const oFromTable{{ sListIDForVarSuffix }}Resize = new ResizeObserver(function(){
+        clearTimeout(oFromTable{{ sListIDForVarSuffix }}ResizeTimeout);
+        oFromTable{{ sListIDForVarSuffix }}ResizeTimeout = setTimeout(function(){
+            $('#{{ oUIBlock.GetId() }}').DataTable().columns.adjust();
+        }, 120);
+    });
+    oFromTable{{ sListIDForVarSuffix }}Resize.observe($('#{{ oUIBlock.GetId() }}')[0]);
 }
