--- a/css/backoffice/blocks-integrations/_panel-with-tab-container.scss
+++ b/css/backoffice/blocks-integrations/_panel-with-tab-container.scss
@@ -11,6 +11,7 @@
 
 $ibo-panel-with-tab-container--padding-top: -1 * ($ibo-panel--body--padding-top - $ibo-panel--highlight--height) !default;
 $ibo-panel-with-tab-container--margin-x: -1 * $ibo-panel--body--padding-x !default;
+$ibo-panel-with-tab-container--margin-bottom: -1 * $ibo-panel--body--padding-bottom !default;
 
 // Note: We use the child ">" selector to ensure this applies only the child tab container, not another one that would be nested
 .ibo-panel {
@@ -19,6 +20,7 @@ $ibo-panel-with-tab-container--margin-x: -1 * $ibo-panel--body--padding-x !defau
       margin-top: $ibo-panel-with-tab-container--padding-top;
       margin-left: $ibo-panel-with-tab-container--margin-x;
       margin-right: $ibo-panel-with-tab-container--margin-x;
+      margin-bottom: $ibo-panel-with-tab-container--margin-bottom;
 
       > .ibo-tab-container--tab-container-list {
         height: 100%;
