N°3914 Add row highlight colors to Datatables block when an object has a triggered tto/ttr

--- a/templates/base/components/datatable/static/formtable/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.ready.js.twig
@@ -31,7 +31,12 @@ var table{{ sListIDForVarSuffix }} = $('#{{ oUIBlock.GetId() }}').DataTable({
         } else {
             $(this).closest('.dataTables_wrapper').find('.dataTables_paginate, .dataTables_info').show();
         }
-    }
+    },
+    createdRow: function( row, data, dataIndex ) {
+        if (data['@class'] !== undefined) {
+            $(row).addClass(data['@class']);
+        }
+    },
 });
 if ($('#{{ oUIBlock.GetId() }}').find('thead').is(':visible')) {
     table{{ sListIDForVarSuffix }}.columns.adjust().draw();
