--- a/templates/base/components/datatable/layout.ready.js.twig
+++ b/templates/base/components/datatable/layout.ready.js.twig
@@ -165,6 +165,11 @@ var oTable{{ sListIfForVarSuffix }} = $('#{{ oUIBlock.GetId() }}').DataTable({
         method: "post",
         pages: 1 // number of pages to cache
     }),
+    createdRow: function( row, data, dataIndex ) {
+        if (data['@class'] !== undefined) {
+            $(row).addClass(data['@class']);
+        }
+    },
     initComplete: function () {
         this.api().columns.adjust().draw();
         if (this.api().page.info().pages < 2)
