N°3914 Fix tagset taking too much space in lists

--- a/css/backoffice/blocks-integrations/_all.scss
+++ b/css/backoffice/blocks-integrations/_all.scss
@@ -12,3 +12,4 @@
 @import "panel-within-modal";
 @import "object-details-with-tab-container";
 @import "medallion-with-blocklist";
+@import "input-within-datatable";
