FAF: Documentation UI Twig Blocks

--- a/.doc/UI/source/_static/css/ui-doc.css
+++ b/.doc/UI/source/_static/css/ui-doc.css
@@ -3,9 +3,11 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-/* theme.css | .doc/UI/build/html/_static/css/theme.css */
-
 .wy-nav-content {
 	max-width: 1024px;
 	min-height: 100%;
+}
+
+h3 {
+	font-size: 100%;
 }
