--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -35,7 +35,7 @@ $ibo-field--value-decoration--spacing-x: 0.5rem !default;
 
   /* Avoid value to overflow from its container with very long strings (typically URLs) */
   /* Note: Some types of attribute must be excluding as it can alter their rendering    */
-  &:not([data-attribute-type="AttributeImage"]):not([data-attribute-type="AttributeFile"]) {
+  &:not([data-attribute-type="AttributeBlob"]):not([data-attribute-type="AttributeFile"]):not([data-attribute-type="AttributeImage"]) {
     /* We need the rule to apply for the class and all its descendants */
     .ibo-field--value {
       * {
