--- a/css/backoffice/components/_search-form.scss
+++ b/css/backoffice/components/_search-form.scss
@@ -829,7 +829,7 @@ $ibo-search-results-area--datatable-scrollhead--border--is-sticking: $ibo-search
 
 
 .sf_results_placeholder {
-	@extend %ibo-font-ral-med-150;
+	@extend %ibo-font-size-150;
 	margin-top: 24px;
 	text-align: center;
 	
@@ -855,7 +855,7 @@ $ibo-search-results-area--datatable-scrollhead--border--is-sticking: $ibo-search
   }
 }
 .ibo-criterion-area{
-	@extend %ibo-font-ral-med-100;
+	@extend %ibo-font-size-100;
 }
 #ibo-main-content .search_form_handler .sf_criterion_area{
 	padding: 0;
