Restyle block loader

--- a/css/backoffice/blocks-integrations/_all.scss
+++ b/css/backoffice/blocks-integrations/_all.scss
@@ -13,3 +13,4 @@
 @import "object-details-with-tab-container";
 @import "medallion-with-blocklist";
 @import "input-within-datatable";
+@import "jquery-blockui-within-dialog";
