Fix block loader style for datatables

--- a/css/backoffice/blocks-integrations/_all.scss
+++ b/css/backoffice/blocks-integrations/_all.scss
@@ -14,3 +14,4 @@
 @import "medallion-with-blocklist";
 @import "input-within-datatable";
 @import "jquery-blockui-within-dialog";
+@import "jquery-blockui-within-datatable";
